[package]
name = "p2pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_matchbox = { git = "https://github.com/johanhelsing/matchbox", branch = "main", features = ["ggrs"] }
bevy = { version = "0.11" }
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs", branch = "main" }
bevy-inspector-egui = "0.19.0"
bytemuck = "1.13.1"
anyhow = "1.0.72"
tiled = { version = "0.11.1", features = ["wasm"], default-features = false }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
